# MacChanger-V1-MAX

./: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  macchanger_pro.py  pyproject.toml  requirements-audit.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: audit-phase1.md  audit-phase3.md
src/macchanger_pro/: __init__.py  __main__.py  cli.py  core.py  errors.py  system.py
tests/: conftest.py  test_backup_restore.py  test_cli_additional.py  test_cli_behavior.py  test_interface_discovery.py  test_mac_generation.py  test_mac_validation.py  test_package_entrypoints.py  test_platform_guard.py  test_set_restore_operations.py  test_system_context.py
