[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macchanger-pro"
version = "1.0.0"
description = "Production-grade Linux MAC address manager with safe backup and restore."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Sagar Biswas" }
]
keywords = ["linux", "networking", "mac", "security", "cli"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
  "Topic :: System :: Networking",
  "Typing :: Typed"
]
dependencies = []

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "mypy>=1.11.0",
  "pip-audit>=2.7.3",
  "pytest>=8.3.0",
  "pytest-cov>=5.0.0",
  "ruff>=0.6.9"
]

[project.scripts]
macchanger-pro = "macchanger_pro.cli:entrypoint"

[tool.setuptools]
package-dir = { "" = "src" }
py-modules = []

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q --strict-config --strict-markers --cov=src/macchanger_pro --cov-report=term-missing --cov-report=xml --cov-fail-under=80"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests", "macchanger_pro.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.10"
mypy_path = "src"
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
exclude = "tests/"
